--- a/index.html
+++ b/index.html
@@ -6,26 +6,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Porfolio</title>
     <link rel="stylesheet" href="style.css">
+    <!--Fonts icons-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+        integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
+        crossorigin="anonymous" />
 </head>
 
 <body>
-    <div class="full-page">
-        <div class="hero">
-            <div class="hero-content">
-                <p>THINKING OF BUYING A HEADPHONE?</p>
-                <h1>HTML Business
-                    Templates</h1>
-                <a href="#">Download CV</a>
-            </div>
+    <header>
+        <div class="logo">Logo</div>
+        <nav>
+            <a href="#">Home</a>
+            <a href="#">About</a>
+            <a href="#">Contact</a>
+            <a href="#">Projects</a>
+        </nav>
+    </header>
+    <div class="hero">
+        <div class="hero-content">
+            <p>.......</p>
+            <h1>Hi, my name is <br> Borislav Draev</h1>
+            <a href="#">Download CV</a>
         </div>
-        <section class="intro">
-            <h3>About</h3>
-            <p>I am a young and highly motivated person with experience in quality assurance industry and medical
-                devices. I'm focused in computer technologies, programing languages and graphic design.</p>
-            <p> My intrinsic skills include strong engineering and creative thinking, knowledge of design principles
-                and attention to details. I also have ability to manage deadlines, multitasking, working under
-                pressure and meeting customer demands. </p>
+        <!--Arrow Scroll-->
+        <div class="scroll"><a href="#intro"><i class="fas fa-angle-double-down fa-3x"></i></a></div>
+    </div>
+    <div class="full-page">
+
+        <!--About information-->
+        <section class="intro" id="intro">
+            <div class="info-image"><img src="./images/CV.jpg"></div>
+            <div class="about-info">
+
+                <h3>About</h3>
+                <p>I am a young and highly motivated person with experience in quality assurance industry and medical
+                    devices. I'm focused in computer technologies, programing languages and graphic design.</p>
+                <p> My intrinsic skills include strong engineering and creative thinking, knowledge of design principles
+                    and attention to details. I also have ability to manage deadlines, multitasking, working under
+                    pressure and meeting customer demands. </p>
+            </div>
         </section>
+
         <main>
             <div class="heading">
                 <h2>Let's see my job</h2>
