--- a/index.html
+++ b/index.html
@@ -49,39 +49,18 @@
 
         <main>
             <div class="heading">
-                <h2>Let's see my job</h2>
+                <h2>Let's see my work!</h2>
             </div>
             <div class="projects">
-                <h3>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor ut corporis ipsam debitis quasi,
-                    hic a ex dicta nec </h3>
                 <div class="grid">
-                    <div class="card">
-                        <div class="image">
-                            <p>design</p>
-                        </div>
-                        <div class="content">
-                            <h4>headphones</h4>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, molestias.S</p>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <div class="image">
-                            <p>design</p>
-                        </div>
-                        <div class="content">
-                            <h4>headphones</h4>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, molestias.S</p>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <div class="image">
-                            <p>design</p>
-                        </div>
-                        <div class="content">
-                            <h4>headphones</h4>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, molestias.S</p>
-                        </div>
-                    </div>
+                    <div class="project">1</div>
+                    <div class="project">2</div>
+                    <div class="project">3</div>
+                    <div class="project">4</div>
+                    <div class="project">5</div>
+                    <div class="project">6</div>
+                    <div class="project">7</div>
+                    <div class="project">8</div>
                 </div>
 
             </div>
