--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             <a href="#">Projects</a>
         </nav>
         <!--END Navbar-->
+        <a class="hamburger" href="#"><i class="fas fa-times"></i></a>
     </header>
     <div class="hero">
         <div class="hero-content">
